nav and search bar fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/google_homepage/css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Google</title>
   </head>
   <body>
@@ -12,15 +12,16 @@
         <ul class="header">
           <li class="pic headerli">
             <a href="https://www.github.com/cengizcmataraci" target="_blank"
-              ><img
-                src="/google_homepage/assets/profilepic.jpg"
+              ><img 
+                id="profilepic"
+                src="https://lh3.googleusercontent.com/ogw/ADea4I7Q4F7qEcIC9eizb-sjEf2j9CyA6JGOMPY7_qoLJQ=s32-c-mo"
                 alt=""
                 style="margin-right: 1px;"
             /></a>
           </li>
           <li style="margin: 8px" class="headerli">
             <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
-              ><img src="/google_homepage/assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a
+              ><img src="assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a
             >
           </li>
           <li style="margin: 8px; margin-left: -2px;" class="headerli">
@@ -38,8 +39,8 @@
       </nav>
       <div class="container">
         <img
-          src="/google_homepage/assets/googlefirstlogo.png"
-          width="350px"
+          src="assets/logo.png"
+          width="272px"
           alt=""
         />
       </div>
@@ -65,9 +66,27 @@
                 class="input"
                 maxlength="2048"
                 autofocus="true"
-              />
+                style="width: 480px;"          
+              />        
             </div>
           </div>
+        <div class="voice-enter" style="padding-top: 5px;">
+          <style data-iml="1650801185106">
+          .dRYYxd{display:flex;flex:0 0 auto;margin-top:-5px;align-items:stretch;flex-direction:row}.minidiv .dRYYxd{margin-top:0}
+          </style> 
+          <style data-iml="1650801185106">
+          .BKRPef{flex:1 0 auto;display:none;cursor:pointer;align-items:center;border:0;background:transparent;outline:none;padding:0 8px;line-height:44px}.M2vV3{display:flex}.ExCKkf{height:100%;color:#70757a;vertical-align:middle;outline:none}.minidiv .BKRPef{line-height:32px}.minidiv .ExCKkf{width:20px}
+          </style> 
+          <style data-iml="1650801185106">
+          .BKRPef{padding-right:4px}.ExCKkf{margin-right:12px}.ACRAdd{border-left:1px solid #dadce0;height:65%}
+          </style> 
+          <div jscontroller="PymCCe" class="BKRPef" jsname="RP0xob" aria-label="Temizle" role="button" jsaction="AVsnlb;rcuQ6b:npT2md" data-ved="0ahUKEwiKz4v1y6z3AhULRfEDHeJIAlwQ05YFCAU"> 
+            <span class="ExCKkf z1asCe rzyADb" jsname="itVqKe" role="button" tabindex="0" aria-label="Temizle">
+              <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
+
+                </path></svg></span> <span class="ACRAdd"></span> </div> <style data-iml="1650801185106">.Umvnrc{flex:1 0 auto;display:flex;cursor:pointer;align-items:center;border:0;background:transparent;outline:none;padding:0 8px;width:24px;line-height:44px}.ly0Ckb{background:url('//www.gstatic.com/inputtools/images/tia.png') no-repeat center;height:24px;width:24px;vertical-align:middle}.yAnw3c{visibility:hidden}</style><style data-iml="1650801185106">.XDyW0e{flex:1 0 auto;display:flex;cursor:pointer;align-items:center;border:0;background:transparent;outline:none;padding:0 8px;width:24px;line-height:44px}.goxjub{height:24px;width:24px;vertical-align:middle}.minidiv .XDyW0e{line-height:32px}.minidiv .goxjub{width:20px;height:20px}</style><div jscontroller="unV4T" class="XDyW0e" aria-label="Sesle arama yapın" role="button" tabindex="0" jsaction="h5M12e;rcuQ6b:npT2md" data-ved="0ahUKEwiKz4v1y6z3AhULRfEDHeJIAlwQvs8DCAY"><svg class="goxjub" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="#4285f4" d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"></path><path fill="#34a853" d="m11 18.08h2v3.92h-2z"></path><path fill="#fbbc05" d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"></path><path fill="#ea4335" d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"></path></svg></div>
+              </div>
         </div>
       </div>
 
