--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
           </li>
         </ul>
       </nav>
-      <div class="container">
+      <div class="container" style="margin-top: 202px;">
         <img
+          
           src="assets/logo.png"
           width="272px"
-          alt=""
+          alt="Google"
         />
       </div>
       <div class="search-area">
@@ -92,16 +93,16 @@
 
       <div class="buttons">
         <a href=""
-          ><button class="googlesearch">Google Search</button></a
+          ><button class="googlesearch">Google'da Ara</button></a
         >
         <a href=""
-          ><button class="feelinglucky">I'm Feeling Lucky</button></a
+          ><button class="feelinglucky">Kendimi Şanslı Hissediyorum</button></a
         >
       </div>
     </div>
 
     <nav>
-      <ul class="footer">
+      <ul class="footer" style="list-style-type: none;">
         <li class="footerli">
           <a
             href="https://www.google.com/intl/en_tr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
